@@ -1,3 +1,11 @@
+2006-10-18  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimpwidgets.c (find_mnemonic_widget): special
+	case GimpSizeEntry and use the last entry.
+
+	* app/tools/gimprotatetool.c
+	* app/tools/gimpsheartool.c: added mnemonics (bug #162541).
+
 2006-10-18  Michael Natterer  <mitch@gimp.org>
 
 	Separate selection tool function (select, move, cut, ...) from
